# pyjsonrpcembd

./: CMakeLists.txt  Makefile  README.md  makefile-for-debug  pyjsonrpcembd.cpp  pyjsonrpcembd.h  setup.py  testpkg.py
example/: example-c.c  example-racket.rkt  python-on-racket.rkt
pyjsonrpcembd/: __init__.py  pyjsonrpcregister.py
test/: calltest.c  calltest.lisp  calltest.lisp~  calltest.scm  calltest.scm~  racket-cffi-python-test.rkt  unit-test.rkt
